# remote-viewing-trainer

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  rv  rv.sh  setup.py
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/: routes.py
app/cli/: __init__.py  __main__.py  main.py  run_mode.py  run_mode_voice.py
app/db/: session.py
app/models/: base.py  session.py  target.py
app/services/: ai.py  score.py  targets.py  voice.py
scripts/: create_tables.sql  init_db.sh  setup.sh  setup_env.sh  summary.sh
tests/: test_health.py  test_scoring.py
